cmake_minimum_required(VERSION 3.23)
project(computing_method C)

set(CMAKE_C_STANDARD 11)

add_executable(Data-struct-C
#        test.c
#        Graph/GraphAdjList.c
#        Graph/Queue/queue.c
#        Graph/Queue/queue.h
#        Queue/queue.h
#        Queue/queue.c
        sort/HeapSort.c
        )
